--- a/Dockerfile-py3-windows
+++ b/Dockerfile-py3-windows
@@ -14,6 +14,7 @@ RUN set -x \
     && dpkg --add-architecture i386 \
     && apt update -qy \
     && apt install --no-install-recommends -qfy \
+        apt-utils \
         apt-transport-https \
         software-properties-common \
         wget \
@@ -64,7 +65,8 @@ RUN set -x \
     && echo 'ftype PythonScript=c:\Python3\python.exe "%1" %*' | wine cmd \
     && while pgrep wineserver >/dev/null; do echo "Waiting for wineserver"; sleep 1; done \
     && chmod +x /usr/bin/python /usr/bin/easy_install /usr/bin/pip /usr/bin/pyinstaller /usr/bin/pyupdater \
-    && (pip install -U pip || true) \
+    && pip config set global.progress_bar off \
+    && (pip install -U pip setuptools wheel || true) \
     && rm -rf /tmp/.wine-*
 
 ENV W_DRIVE_C=/wine/drive_c
@@ -75,13 +77,16 @@ ENV W_TMP="$W_DRIVE_C/windows/temp/_$0"
 # install Microsoft Visual C++ Redistributable for Visual Studio 2017 dll files
 RUN set -x \
     && rm -f "$W_TMP"/* \
-    && wget -P "$W_TMP" https://download.visualstudio.microsoft.com/download/pr/11100230/15ccb3f02745c7b206ad10373cbca89b/VC_redist.x64.exe \
+    && wget -q -nv -P "$W_TMP" https://download.visualstudio.microsoft.com/download/pr/11100230/15ccb3f02745c7b206ad10373cbca89b/VC_redist.x64.exe \
     && cabextract -q --directory="$W_TMP" "$W_TMP"/VC_redist.x64.exe \
     && cabextract -q --directory="$W_TMP" "$W_TMP/a10" \
     && cabextract -q --directory="$W_TMP" "$W_TMP/a11" \
     && cd "$W_TMP" \
     && rename 's/_/\-/g' *.dll \
     && cp "$W_TMP"/*.dll "$W_SYSTEM64_DLLS"/
+
+# Include some support to build Windows installers
+RUN apt install -qy msitools wixl
 
 # install pyinstaller
 RUN /usr/bin/pip install --no-cache-dir pyinstaller==$PYINSTALLER_VERSION
